# VoiceClone-Web

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
src/voiceclone/: app.py  audio.py  config.py  engines.py  hf_auth.py  model_download_worker.py  model_manager.py  models.py  qwen_tts_worker.py  storage.py  stt.py  stt_worker.py  torch_tts_worker.py
tests/: test_api.py
