[project]
name = "voiceclone"
version = "0.1.0"
description = "Local VoiceClone web app with MLX and PyTorch engine options."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "huggingface-hub>=0.34.0,<2.0",
]

[project.optional-dependencies]
mlx = [
    "mlx-audio>=0.2.0",
]
torch = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
]
qwen-torch = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
]
chatterbox-torch = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[project.scripts]
voiceclone-api = "voiceclone.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceclone"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
